微调文本样式

--- a/I would never send my kids to school我永远不会送我的孩子去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -188,9 +188,9 @@ Most of us have no idea how Halle Berry smells and her smell might not be unique
 
 [![Olfactory system anatomy](https://supermemo.guru/images/thumb/0/04/Olfactory_system_anatomy.jpg/692px-Olfactory_system_anatomy.jpg)](https://supermemo.guru/wiki/File:Olfactory_system_anatomy.jpg)
 
-> **Figure**: *Olfactory system anatomy. The smell signal can get to the hippocampus fast via just a few synapses in the olfactory bulb, olfactory tubercle, piniform cortex, and the entorhinal cortex. (source: Wikipedia)*
+> **Figure:** Olfactory system anatomy. The smell signal can get to the hippocampus fast via just a few synapses in the olfactory bulb, olfactory tubercle, piniform cortex, and the entorhinal cortex. (source: Wikipedia)
 >
-> **图**：*嗅觉系统解剖学。嗅觉信号可以通过嗅球、嗅结节、小齿轮状皮层和鼻内皮层的几个突触快速到达海马体。（来源：维基百科）*
+> **图：**嗅觉系统解剖学。嗅觉信号可以通过嗅球、嗅结节、小齿轮状皮层和鼻内皮层的几个突触快速到达海马体。（来源：维基百科）
 
 Does it all mean that Halle resides permanently in the patient's hippocampus? Due to the association of the hippocampus with formation of new memories, we may rather think that Halle shows up in hippocampal neurons as a result of the recognition. Her permanent place in the heart of the patient is likely situated further downstream in the neocortex. We now know that in the process of memory consolidation, knowledge engrams [move from the hippocampus to the neocortex](http://www.jneurosci.org/content/29/32/10087.full). We are also pretty sure that this process is happening [in sleep](http://super-memory.com/articles/sleep.htm#Neural_optimization_in_sleep). It is in the neocortex that we should look for concept neurons representing Halle or one's grandmother. This last possibility gave rise to a hypothetical type of neuron called [**the grandmother cell**](https://en.wikipedia.org/wiki/Grandmother_cell).
 
@@ -232,9 +232,9 @@ In the summer of 1977, while looking for extraterrestrial intelligence, SETI res
 
 [![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
 
-> **Figure**: *A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the [Wow! signal](https://en.wikipedia.org/wiki/Wow!_signal). (source: Wikipedia)*
+> **Figure:** A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the [Wow! signal](https://en.wikipedia.org/wiki/Wow!_signal). (source: Wikipedia)
 >
-> **图**：*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇！信号](https://en.wikipedia.org/wiki/Wow!_signal)到达后的几年。（来源：维基百科）*
+> **图：**一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇！信号](https://en.wikipedia.org/wiki/Wow!_signal)到达后的几年。（来源：维基百科）
 
 "Wow!" is how the brain responds to a sudden discovery. The moment is highly pleasurable. The entire purpose of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is to look for wow factors in the environment. These are the most valuable nuggets of knowledge that complement what is currently known: the current model of reality. The pleasure of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) comes from the condensed power of wows streamed into the student's brain.
 
@@ -302,9 +302,9 @@ In computational terms, knowledge valuation network can be compared to a [decisi
 
 [![xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles](https://supermemo.guru/images/thumb/9/97/Exemplary_xefer_output.jpg/675px-Exemplary_xefer_output.jpg)](https://supermemo.guru/wiki/File:Exemplary_xefer_output.jpg)
 
-> **Figure**: *xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles.[Try it](https://xefer.com/wikipedia)*
+> **Figure:** xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles.[Try it](https://xefer.com/wikipedia)
 >
-> **图**：*xefer是一种工具，有助于将知识理解为网络。它依赖维基百科文章之间的语义链接。[试试看](https://xefer.com/wikipedia)*
+> **图：**xefer是一种工具，有助于将知识理解为网络。它依赖维基百科文章之间的语义链接。[试试看](https://xefer.com/wikipedia)
 
 ### 6.10.4 Valuation network in education
 
@@ -1089,9 +1089,9 @@ Given enough time and access to knowledge-rich environments, without the need fo
 >
 > [![Crystallization metaphor of schooling and unschooling](https://supermemo.guru/images/thumb/8/8a/Crystallization_metaphor_of_schooling.png/500px-Crystallization_metaphor_of_schooling.png)](https://supermemo.guru/wiki/File:Crystallization_metaphor_of_schooling.png)
 >
-> > **Figure**: *In **perfect schooling** we create a perfect crystal of knowledge. In college, we add an extra crystal of specialization. In reality though, learning looks a bit less perfect. For most kids, knowledge never builds sufficient coherence and falls apart due to interference (i.e. fast forgetting). As a result, in **real schooling**, knowledge asymptotically reaches a certain volume and keeps churning around from that point on with little progress in stability or coherence. In contrast, in **free learning**, the acquisition of knowledge is chaotic and uneven. However, as long as it is based on the learn drive, the volume of knowledge is very large. Individual crystals of knowledge collide, and build consistency and coherence. This in turn helps stability and further integration of knowledge. By the time of college, in terms of volume, free learners should know far more than ordinary students. Free knowledge has multiple areas of strength, and multiple areas of weakness. However, it superior in coherence. This is why it is more applicable in problem solving*
+> > **Figure:** In **perfect schooling** we create a perfect crystal of knowledge. In college, we add an extra crystal of specialization. In reality though, learning looks a bit less perfect. For most kids, knowledge never builds sufficient coherence and falls apart due to interference (i.e. fast forgetting). As a result, in **real schooling**, knowledge asymptotically reaches a certain volume and keeps churning around from that point on with little progress in stability or coherence. In contrast, in **free learning**, the acquisition of knowledge is chaotic and uneven. However, as long as it is based on the learn drive, the volume of knowledge is very large. Individual crystals of knowledge collide, and build consistency and coherence. This in turn helps stability and further integration of knowledge. By the time of college, in terms of volume, free learners should know far more than ordinary students. Free knowledge has multiple areas of strength, and multiple areas of weakness. However, it superior in coherence. This is why it is more applicable in problem solving
 > >
-> > **图**：*在**完美的学校教育**中，我们创造了完美的知识结晶。在大学里，我们又多了一块专业化的水晶。然而，在现实中，学习看起来并不那么完美。对于大多数孩子来说，知识从来没有建立足够的连贯性，并且由于干扰(即快速遗忘)而支离破碎。因此，在**现实的学校教育**中，知识渐近达到一定的数量，并从那一刻起就不断地翻滚，在稳定性和连贯性方面几乎没有进展。相反，在**自由学习**中，知识的获取是混乱和不均衡的。但是，只要它是基于学习内驱力，知识量是非常大的。知识的单个晶体相互碰撞，并建立一致性和连贯性。这反过来又有助于知识的稳定和进一步整合。到了大学时，就体积而言，自由学习者应该比普通学生知道的要多得多。自由知识有多方面的长处，也有多方面的弱点。然而，它在连贯性方面更优越。这就是为什么它更适用于解决问题*
+> > **图：**在**完美的学校教育**中，我们创造了完美的知识结晶。在大学里，我们又多了一块专业化的水晶。然而，在现实中，学习看起来并不那么完美。对于大多数孩子来说，知识从来没有建立足够的连贯性，并且由于干扰(即快速遗忘)而支离破碎。因此，在**现实的学校教育**中，知识渐近达到一定的数量，并从那一刻起就不断地翻滚，在稳定性和连贯性方面几乎没有进展。相反，在**自由学习**中，知识的获取是混乱和不均衡的。但是，只要它是基于学习内驱力，知识量是非常大的。知识的单个晶体相互碰撞，并建立一致性和连贯性。这反过来又有助于知识的稳定和进一步整合。到了大学时，就体积而言，自由学习者应该比普通学生知道的要多得多。自由知识有多方面的长处，也有多方面的弱点。然而，它在连贯性方面更优越。这就是为什么它更适用于解决问题
 >
 
 ### 6.23.6 Local optimization
