--- a/I would never send my kids to school我永远不会送我的孩子去学校/08.Education counteracts evolution教育抵消进化.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/08.Education counteracts evolution教育抵消进化.md
@@ -97,9 +97,9 @@ The next seemingly logical step in improving education is to introduce coercion.
 
 [![Preschool torture device](https://supermemo.guru/images/thumb/0/04/Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg/300px-Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)](https://supermemo.guru/wiki/File:Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)
 
-> **Figure**: *Multi-seat toddler desk is a preschool torture device. [The brain says "keep exploring"](https://supermemo.guru/wiki/Education_counteracts_evolution). The authoritarian teacher says "Stop moving! Read my lips!". For more see: [Would you have a heart to cage a puppy?](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)*
+> **Figure:** Multi-seat toddler desk is a preschool torture device. [The brain says "keep exploring"](https://supermemo.guru/wiki/Education_counteracts_evolution). The authoritarian teacher says "Stop moving! Read my lips!". For more see: [Would you have a heart to cage a puppy?](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)
 >
-> **图**： *多座位幼儿桌是学龄前的折磨设备。 [大脑说「继续探索」](https://supermemo.guru/wiki/Education_counteracts_evolution)。 专制的老师说「别动！注意听！」。 欲了解更多信息：[你会忍心把小狗关在笼子里吗](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)？*
+> **图：** 多座位幼儿桌是学龄前的折磨设备。 [大脑说「继续探索」](https://supermemo.guru/wiki/Education_counteracts_evolution)。 专制的老师说「别动！注意听！」。 欲了解更多信息：[你会忍心把小狗关在笼子里吗](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)？
 
 ## 8.8 Resistance to social pressure
 
@@ -183,9 +183,9 @@ The bigger the [knowledge tree](https://supermemo.guru/wiki/Knowledge_tree) the 
 
 [![A dog submit to lost freedom via learned helplessness](https://supermemo.guru/images/thumb/c/c6/Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg/200px-Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg)](https://supermemo.guru/wiki/File:Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg)
 
-> **Figure**: *Even if children [hate school](https://supermemo.guru/wiki/Why_kids_hate_school) they accept their fate via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). This destroys their [natural love of learning](https://supermemo.guru/wiki/Pleasure_of_learning), suppresses natural creativity, deprives of independence, and may lead to mental disorders later in life (picture source: Wikipedia)*
+> **Figure:** Even if children [hate school](https://supermemo.guru/wiki/Why_kids_hate_school) they accept their fate via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). This destroys their [natural love of learning](https://supermemo.guru/wiki/Pleasure_of_learning), suppresses natural creativity, deprives of independence, and may lead to mental disorders later in life (picture source: Wikipedia)
 >
-> **图**：*即使儿童[讨厌学校](https://supermemo.guru/wiki/Why_kids_hate_school)，他们也会通过[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)来接受自己的命运。这破坏了他们[天生的求知欲](https://supermemo.guru/wiki/Pleasure_of_learning)，压制了天生的创造力，剥夺了他们的独立性，并可能在以后的生活中导致精神障碍（图片来源：维基百科）*
+> **图：**即使儿童[讨厌学校](https://supermemo.guru/wiki/Why_kids_hate_school)，他们也会通过[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)来接受自己的命运。这破坏了他们[天生的求知欲](https://supermemo.guru/wiki/Pleasure_of_learning)，压制了天生的创造力，剥夺了他们的独立性，并可能在以后的生活中导致精神障碍（图片来源：维基百科）
 
 ## 8.14 Overoptimization
 
