--- a/I would never send my kids to school我永远不会送我的孩子去学校/11.Optimum push zone最佳推动区.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/11.Optimum push zone最佳推动区.md
@@ -8,9 +8,9 @@
 
 [![Optimal push zone in education](https://supermemo.guru/images/thumb/f/f6/Optimal_push_zone.png/800px-Optimal_push_zone.png)](https://supermemo.guru/wiki/File:Optimal_push_zone.png)
 
-> **Figure**:**Optimum push zone**(in blue) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning (**regress zone** in black). Schooling results in increased tolerance for coercion via learned helplessness (in green). It also decreases the learning outcomes and increases the required level of coercion
+> **Figure:** **Optimum push zone**(in blue) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning (**regress zone** in black). Schooling results in increased tolerance for coercion via learned helplessness (in green). It also decreases the learning outcomes and increases the required level of coercion
 >
-> **图**：**最佳推进区**（蓝色）是可能改进学习效果的外部压力范围。如果压力超过推动区，学习效果就会下降。在某一点上，压力会导致学得更少，而不是更多（黑色的**回归区**）。学校教育通过习得性无助（绿色）提高了对强制的容忍度。它还会降低学习效果，并增加所需的强制水平
+> **图：** **最佳推进区**（蓝色）是可能改进学习效果的外部压力范围。如果压力超过推动区，学习效果就会下降。在某一点上，压力会导致学得更少，而不是更多（黑色的**回归区**）。学校教育通过习得性无助（绿色）提高了对强制的容忍度。它还会降低学习效果，并增加所需的强制水平
 
 ## 11.1 Push zone at school
 
