--- a/I would never send my kids to school我永远不会送我的孩子去学校/12.Natural creativity cycle自然创造力周期.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/12.Natural creativity cycle自然创造力周期.md
@@ -16,9 +16,9 @@ Understanding the creativity cycle is essential for high creativity, good learni
 
 [![Natural creativity cycle](https://supermemo.guru/images/thumb/8/8c/Natural_creativity_cycle.png/300px-Natural_creativity_cycle.png)](https://supermemo.guru/wiki/File:Natural_creativity_cycle.png)
 
-> **Figure**: *In the **natural creativity cycle** there is a regular interplay between the creative processes and the consolidation of knowledge. For high creativity and good learning, those processes must proceed unimpeded. Sleep must come naturally and should never be interrupted. Waking day should also have large blocks protected from interruption, multitasking, and stress. Starting with the **creative morning explosion**, seeds of activation (in red) get gradually converted into a **big idea** that emerges on the next morning. In the meantime, learning, reasoning, and creative activations reshuffle neuronal connections. New connections emerge, get strengthened, weakened, eliminated, or are consolidated for long term storage. All steps are essential for the emergence of the ultimate big idea. For details see: Neural aspects of the natural creativity cycle*
+> **Figure:** In the **natural creativity cycle** there is a regular interplay between the creative processes and the consolidation of knowledge. For high creativity and good learning, those processes must proceed unimpeded. Sleep must come naturally and should never be interrupted. Waking day should also have large blocks protected from interruption, multitasking, and [stress](https://supermemo.guru/wiki/Stress). Starting with the **creative morning explosion**, seeds of activation (in red) get gradually converted into a **big idea** that emerges on the next morning. In the meantime, learning, reasoning, and creative activations reshuffle neuronal connections. New connections emerge, get strengthened, weakened, eliminated, or are consolidated for long term storage. All steps are essential for the emergence of the ultimate big idea. For details see: [Neural aspects of the natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle#Neural_aspects_of_the_creativity_cycle)
 >
-> **图**：*在**自然创造力周期**中，创造过程和巩固知识之间有规律的相互作用。为了获得高度的创造力和良好的学习，这些进程必须畅通无阻地进行。睡眠必须是自然的，不能被打扰。醒着的一天也应该有大块保护免受干扰，多任务处理，和压力。从**早晨的创意爆炸**开始，激活的种子（红色的）逐渐转化为第二天早上出现的一个**伟大的想法**。同时，学习，推理和创造性的活动重新洗牌神经元连接。新的连接会出现、得到加强、削弱、消除或整合以进行长期存储。所有的步骤对于最终的大想法的出现都是必不可少的。详情见：自然创造周期的神经方面*
+> **图：**在**自然创造力周期**中，创造过程和巩固知识之间有规律的相互作用。为了获得高度的创造力和良好的学习，这些进程必须畅通无阻地进行。睡眠必须是自然的，不能被打扰。醒着的一天也应该有大块保护免受干扰、多任务处理和[压力](https://supermemo.guru/wiki/Stress)。从**早晨的创意爆炸**开始，激活的种子（红色的）逐渐转化为第二天早上出现的一个**伟大的想法**。同时，学习，推理和创造性的活动重新洗牌神经元连接。新的连接会出现、得到加强、削弱、消除或整合以进行长期存储。所有的步骤对于最终的大想法的出现都是必不可少的。详情见：[自然创造周期的神经方面](https://supermemo.guru/wiki/Natural_creativity_cycle#Neural_aspects_of_the_creativity_cycle)
 
 ## 12.2 Natural creativity cycle
 
@@ -422,9 +422,9 @@ One good artificial prop in the natural creativity cycle is the proverbial pen a
 
 [![Circadian graph and brainwork.gif](https://supermemo.guru/images/thumb/e/ef/Circadian_graph_and_brainwork.gif/500px-Circadian_graph_and_brainwork.gif)](https://supermemo.guru/wiki/File:Circadian_graph_and_brainwork.gif)
 
-> **Figure**: **Optimizing the timing of brainwork with respect to the circadian cycle.** *This exemplary graph was generated with the help of SleepChart on the basis of 3-year-long daily measurements of a free-running sleep rhythm. The horizontal axis expresses the number of hours from awakening (note that the free running rhythm period is often longer than 24 hours). Light blue dots are actual sleep episode measurements with timing on the horizontal, and the length on the left vertical axis. **Homeostatic** sleepiness can roughly be expressed as the **ability to initiate sleep**. Percent of the initiated sleep episodes is painted as a thick blue line (right-side calibrations of the vertical axis). Adenosine-related homeostatic sleep propensity increases in proportion to mental effort and can be partially cleared by caffeine, stress, etc. **Circadian** sleepiness can roughly be expressed as **the ability to maintain sleep**. Average length of initiated sleep episodes is painted as a thick red line (left-side calibrations of the vertical axis). Mid-day slump in alertness is also circadian, but is biologically different and results in short sleep that does not register as red sleep maintenance peak. **Sleep maintenance** circadian component correlates (1) negatively with temperature, ACTH, cortisol, catecholamines, and (2) positively with: melatonin and REM sleep propensity. Optimum timing of brainwork requires both low homeostatic and circadian sleepiness. There are two quality alertness blocks during the day: first after the awakening and second after the siesta. Both are marked yellow in the graph. For best learning and best creative results use these yellow blocks. Caffeine can only be used to enhance alertness early in this optimum window (brown). Later use will affect sleep (caffeine half-life is about six hours). Optimum timing of exercise is not marked as it may vary depending on the optimum timing of zeitgebers (e.g. early morning for DSPS people and evening for ASPS people). For more details see: [Biphasic nature of human sleep](https://supermemo.guru/wiki/Biphasic_life).*
+> **Figure:** **Optimizing the timing of brainwork with respect to the circadian cycle.** This exemplary graph was generated with the help of SleepChart on the basis of 3-year-long daily measurements of a free-running sleep rhythm. The horizontal axis expresses the number of hours from awakening (note that the free running rhythm period is often longer than 24 hours). Light blue dots are actual sleep episode measurements with timing on the horizontal, and the length on the left vertical axis. **Homeostatic** sleepiness can roughly be expressed as the **ability to initiate sleep**. Percent of the initiated sleep episodes is painted as a thick blue line (right-side calibrations of the vertical axis). Adenosine-related homeostatic sleep propensity increases in proportion to mental effort and can be partially cleared by caffeine, stress, etc. **Circadian** sleepiness can roughly be expressed as **the ability to maintain sleep**. Average length of initiated sleep episodes is painted as a thick red line (left-side calibrations of the vertical axis). Mid-day slump in alertness is also circadian, but is biologically different and results in short sleep that does not register as red sleep maintenance peak. **Sleep maintenance** circadian component correlates (1) negatively with temperature, ACTH, cortisol, catecholamines, and (2) positively with: melatonin and REM sleep propensity. Optimum timing of brainwork requires both low homeostatic and circadian sleepiness. There are two quality alertness blocks during the day: first after the awakening and second after the siesta. Both are marked yellow in the graph. For best learning and best creative results use these yellow blocks. Caffeine can only be used to enhance alertness early in this optimum window (brown). Later use will affect sleep (caffeine half-life is about six hours). Optimum timing of exercise is not marked as it may vary depending on the optimum timing of zeitgebers (e.g. early morning for DSPS people and evening for ASPS people). For more details see: [Biphasic nature of human sleep](https://supermemo.guru/wiki/Biphasic_life).
 >
-> **图**：**根据昼夜周期优化脑力工作的时间。** *这个示例性的图表是在睡眠图的帮助下生成的，其基础是对自由活动的睡眠节奏的连续 3 年的每日测量。水平轴表示从醒来开始的小时数（请注意，自由运行的节奏周期通常超过24小时）。浅蓝点是实际的睡眠事件测量，时间在水平方向，长度在左侧垂直轴上。**稳态**睡眠可以粗略地表现为**启动睡眠的能力**。启动的睡眠事件的百分比被绘制为一条粗蓝线（垂直轴的右侧校准）。腺苷相关的稳态睡眠倾向随着脑力的增加而增加，并且可以通过咖啡因、压力等来部分清除。**昼夜**睡眠可以粗略地表现为**维持睡眠的能力**。启动的睡眠事件的平均长度被画成一条粗红线（垂直轴的左侧校准）。午间警觉性下降也是昼夜节律，但生理上是不同的，导致睡眠时间短，不是红色睡眠维持高峰。**睡眠维持**昼夜节律成分(1)与体温、ACTH、皮质醇、儿茶酚胺呈负相关；(2)与褪黑素、快速眼动睡眠倾向呈正相关。脑力劳动的最佳时机要求低的内稳态和昼夜节律的困倦。白天有两个高质量的警觉性障碍：第一个是在觉醒之后，第二个是在午睡之后。两个都在图中标记为黄色。为了获得最佳的学习和最佳的创造性结果，请使用这些黄色块。咖啡因只能在这个最佳窗口(棕色)的早期被用来提高警觉性。以后的使用会影响睡眠(咖啡因的半衰期约为6小时)。运动的最佳时间并没有标明，因为它可能会因时代的最佳时间而有所不同（例如，DSPS 的人是清晨，ASPS 的人是晚上）。有关更多细节，请参见：[人类睡眠的双相性](https://supermemo.guru/wiki/Biphasic_life)。*
+> **图：** **根据昼夜周期优化脑力工作的时间。**这个示例性的图表是在睡眠图的帮助下生成的，其基础是对自由活动的睡眠节奏的连续 3 年的每日测量。水平轴表示从醒来开始的小时数（请注意，自由运行的节奏周期通常超过24小时）。浅蓝点是实际的睡眠事件测量，时间在水平方向，长度在左侧垂直轴上。**稳态**睡眠可以粗略地表现为**启动睡眠的能力**。启动的睡眠事件的百分比被绘制为一条粗蓝线（垂直轴的右侧校准）。腺苷相关的稳态睡眠倾向随着脑力的增加而增加，并且可以通过咖啡因、压力等来部分清除。**昼夜**睡眠可以粗略地表现为**维持睡眠的能力**。启动的睡眠事件的平均长度被画成一条粗红线（垂直轴的左侧校准）。午间警觉性下降也是昼夜节律，但生理上是不同的，导致睡眠时间短，不是红色睡眠维持高峰。**睡眠维持**昼夜节律成分(1)与体温、ACTH、皮质醇、儿茶酚胺呈负相关；(2)与褪黑素、快速眼动睡眠倾向呈正相关。脑力劳动的最佳时机要求低的内稳态和昼夜节律的困倦。白天有两个高质量的警觉性障碍：第一个是在觉醒之后，第二个是在午睡之后。两个都在图中标记为黄色。为了获得最佳的学习和最佳的创造性结果，请使用这些黄色块。咖啡因只能在这个最佳窗口(棕色)的早期被用来提高警觉性。以后的使用会影响睡眠(咖啡因的半衰期约为6小时)。运动的最佳时间并没有标明，因为它可能会因时代的最佳时间而有所不同（例如，DSPS 的人是清晨，ASPS 的人是晚上）。有关更多细节，请参见：[人类睡眠的双相性](https://supermemo.guru/wiki/Biphasic_life)。
 
 ## 12.10 Summary: Natural creativity cycle
 
