build github pages

--- a/I would never send my kids to school我永远不会送我的孩子去学校/00.Content目录.md
+++ b/I would never send my kids to school我永远不会送我的孩子去学校/00.Content目录.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Content目录
+---
+
 - [1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction)
 - [前言](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school我再也不会把孩子送去学校/01.Introduction前言.md)
   - [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
